k8s/talent-core/templates/ingress/gateway.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talent-core-ingress-v2
  annotations:
    # GCE Ingress
    kubernetes.io/ingress.class: "gce"
    cloud.google.com/backend-config: "talent-core-backend-config"
    networking.gke.io/managed-certificates: "talent-core-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "talent-core-frontend-config"
    # Deshabilitamos SSL por ahora
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: api.devcorebits.com
      http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: gateway
              port:
                number: 3000
